Fixes information table layout issues

--- a/renderer/src/screens/single-request-details/components/RequestInfoTable.css
+++ b/renderer/src/screens/single-request-details/components/RequestInfoTable.css
@@ -14,8 +14,6 @@ td, th {
 }
 
 td {
-  width: min-content;
-  display: inline-block;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
